--- a/style.css
+++ b/style.css
@@ -236,8 +236,12 @@ h5 {
     }
 
     .info1 {
-        margin-top: 120px;
+        margin-top: 60px;
         grid-area: two;
+    }
+
+    .info2 {
+        margin-top: 60px;
     }
 
     .zoomlogo {
